Corrected coffeescript, bundle update

--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -1,4 +1,5 @@
 <div id='container'>
   <h1>Unoriginal Raffler</h1>
-  {{outlet}}
+  {{view Ember.TextField valueBinding='newEntryName'}}
+  {{newEntryName}}
 </div>
